--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel --out-dir docs --public-url /conference-badge-print/ src/index.html",
     "clean": "rimraf docs",
-    "build": "npm run clean && parcel build --out-dir docs src/index.html",
+    "build": "npm run clean && parcel build --out-dir docs --public-url /conference-badge-print/ src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
